fixed alignment issues with profile image when logged in

--- a/public/styles/myPosts.css
+++ b/public/styles/myPosts.css
@@ -279,8 +279,8 @@ body {
 }
 
 .profileImage {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     border-style: solid;
 }
