--- a/public/styles/shoppingCart.css
+++ b/public/styles/shoppingCart.css
@@ -237,8 +237,8 @@ body {
     bottom: 10px;
 }
 .profileImage {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     border-style: solid;
 }
